# langchain-remote-tool

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/langchain_remote_tool/: __init__.py  remote_tool.py
tests/: test_tool.py
