[tool.poetry]
name = "langchain-remote-tool"
version = "0.1.0"
description = ""
authors = ["Masahiro Nishimi <mah@edged-edge.jp>"]
readme = "README.md"
packages = [{include = "langchain_remote_tool", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
